tests/EtaX/EtaX.meth/EtaX.meth.3.0.check
// exitCode: 0   val t3a: () => Any = meth                   // eta-expansion, but lint warning
// exitCode: 1   val t3Sam0S: Sam0S = meth                   // err??/warn/succ: -Xlint:eta-zero + -Xlint:eta-sam, no eta-expansion w/o 2.14?
-- [E100] Syntax Error: target/tests/EtaX/EtaX.meth/EtaX.meth/EtaX.meth.01.scala:10:23 
10 |  val t3Sam0S: Sam0S = meth                   // err??/warn/succ: -Xlint:eta-zero + -Xlint:eta-sam, no eta-expansion w/o 2.14?
   |                       ^^^^
   |                       method meth must be called with () argument

Explanation
===========
Previously an empty argument list () was implicitly inserted when calling a nullary method without arguments. E.g.

def next(): T = ...
          |next     // is expanded to next()

In Dotty, this idiom is an error. The application syntax has to follow exactly the parameter syntax.
Excluded from this rule are methods that are defined in Java or that override methods defined in Java.

1 error found
// exitCode: 1   val t3Sam0J: Sam0J = meth                   // err??/warn/succ: -Xlint:eta-zero, no eta-expansion w/o 2.14?
-- [E100] Syntax Error: target/tests/EtaX/EtaX.meth/EtaX.meth/EtaX.meth.02.scala:11:23 
11 |  val t3Sam0J: Sam0J = meth                   // err??/warn/succ: -Xlint:eta-zero, no eta-expansion w/o 2.14?
   |                       ^^^^
   |                       method meth must be called with () argument

Explanation
===========
Previously an empty argument list () was implicitly inserted when calling a nullary method without arguments. E.g.

def next(): T = ...
          |next     // is expanded to next()

In Dotty, this idiom is an error. The application syntax has to follow exactly the parameter syntax.
Excluded from this rule are methods that are defined in Java or that override methods defined in Java.

1 error found
// exitCode: 1   val t3b: Any       = { val t = meth   ; t } // ?/succ/warn: apply, ()-insertion
-- [E100] Syntax Error: target/tests/EtaX/EtaX.meth/EtaX.meth/EtaX.meth.03.scala:12:33 
12 |  val t3b: Any       = { val t = meth   ; t } // ?/succ/warn: apply, ()-insertion
   |                                 ^^^^
   |                             method meth must be called with () argument

Explanation
===========
Previously an empty argument list () was implicitly inserted when calling a nullary method without arguments. E.g.

def next(): T = ...
          |next     // is expanded to next()

In Dotty, this idiom is an error. The application syntax has to follow exactly the parameter syntax.
Excluded from this rule are methods that are defined in Java or that override methods defined in Java.

1 error found
// exitCode: 0   val t3c: () => Any = meth _                 // ok
// exitCode: 0   val t3d: () => Any = { val t = meth _ ; t } // ok?/ok
// exitCode: 0   val t3e: Any       = meth _                 // ok
// exitCode: 1   val t3f: Any       = meth() _               // error: _ must follow method
-- [E099] Syntax Error: target/tests/EtaX/EtaX.meth/EtaX.meth/EtaX.meth.07.scala:16:30 
16 |  val t3f: Any       = meth() _               // error: _ must follow method
   |                       ^^^^^^^^
   |Only function types can be followed by _ but the current expression has type String

Explanation
===========
The syntax x _ is no longer supported if x is not a function.
To convert to a function value, you need to explicitly write () => x

1 error found
